--- a/public/mediagallery/index.html
+++ b/public/mediagallery/index.html
@@ -47,11 +47,11 @@
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
 					<li class="active"><a href="#HomePage" data-toggle="tab"><i class="fa fa-home"></i> Home</a></li>
-					<li><a href="#MediaPage" data-dir="/Media/Photos" data-toggle="tab"><i class="fa fa-camera"></i> Photos</a></li>
-                    <li><a href="#MediaPage" data-dir="/Media/Videos" data-toggle="tab"><i class="fa fa-video-camera"></i> Videos</a></li>
-                    <li><a href="#MediaPage" data-dir="/Media/Docs" data-toggle="tab"><i class="fa fa-files-o"></i> Docs</a></li>
-                    <li><a href="#MediaPage" data-dir="/Media/Music" data-toggle="tab"><i class="fa fa-music"></i> Music</a></li>
-                    <li><a href="/wiki" data-dir="/Media/Music" data-toggle="tab"><i class="fa fa-wikipedia-w"></i> Wiki</a></li>
+					<li><a href="#MediaPage" data-dir="Media/Photos" data-toggle="tab"><i class="fa fa-camera"></i> Photos</a></li>
+                    <li><a href="#MediaPage" data-dir="Media/Videos" data-toggle="tab"><i class="fa fa-video-camera"></i> Videos</a></li>
+                    <li><a href="#MediaPage" data-dir="Media/Docs" data-toggle="tab"><i class="fa fa-files-o"></i> Docs</a></li>
+                    <li><a href="#MediaPage" data-dir="Media/Music" data-toggle="tab"><i class="fa fa-music"></i> Music</a></li>
+                    <li><a href="/wiki" data-dir="Media/Music" data-toggle="tab"><i class="fa fa-wikipedia-w"></i> Wiki</a></li>
 				</ul>
 			</div> <!-- navbar-collapse (controlled by the collapse toggle button) -->
 	</div> <!-- container -->
@@ -148,7 +148,7 @@ in bands with a group of friends since High School and we have created a music c
     </script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/js/blueimp-gallery.min.js"></script>
 	<script src="js/util.js?ver=2.104"></script>
-	<script src="mediagallery/mediagallery.js?ver=1.005"></script>
+	<script src="js/mediagallery.js?ver=1.0425"></script>
     <script src="js/main.js?ver=3.003"></script>
     <!--
 	<script src="js/googleAnalytics.js?ver=1.000"></script>
