--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/css/blueimp-gallery.min.css">
-	<link rel="stylesheet" href="css/main.css?ver=3.004">
+	<link rel="stylesheet" href="css/main.css?ver=3.005">
 </head>
 
 <body>
@@ -47,11 +47,11 @@
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
 					<li class="active"><a href="#HomePage" data-toggle="tab"><i class="fa fa-home"></i> Home</a></li>
-					<li><a href="#MediaPage" data-dir="/Media/Photos" data-toggle="tab"><i class="fa fa-camera"></i> Photos</a></li>
-                    <li><a href="#MediaPage" data-dir="/Media/Videos" data-toggle="tab"><i class="fa fa-video-camera"></i> Videos</a></li>
-                    <li><a href="#MediaPage" data-dir="/Media/Docs" data-toggle="tab"><i class="fa fa-files-o"></i> Docs</a></li>
-                    <li><a href="#MediaPage" data-dir="/Media/Music" data-toggle="tab"><i class="fa fa-music"></i> Music</a></li>
-                    <li><a href="/wiki" data-dir="/Media/Music" data-toggle="tab"><i class="fa fa-wikipedia-w"></i> Wiki</a></li>
+					<li><a href="#MediaPage" data-dir="Photos" data-toggle="tab"><i class="fa fa-camera"></i> Photos</a></li>
+                    <li><a href="#MediaPage" data-dir="Videos" data-toggle="tab"><i class="fa fa-video-camera"></i> Videos</a></li>
+                    <li><a href="#MediaPage" data-dir="Docs" data-toggle="tab"><i class="fa fa-files-o"></i> Docs</a></li>
+                    <li><a href="#MediaPage" data-dir="Music" data-toggle="tab"><i class="fa fa-music"></i> Music</a></li>
+                    <li><a href="/wiki"><i class="fa fa-wikipedia-w"></i> Wiki</a></li>
 				</ul>
 			</div> <!-- navbar-collapse (controlled by the collapse toggle button) -->
 	</div> <!-- container -->
@@ -147,9 +147,8 @@ in bands with a group of friends since High School and we have created a music c
         integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd">
     </script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/js/blueimp-gallery.min.js"></script>
-	<script src="js/util.js?ver=2.104"></script>
-	<script src="mediagallery/mediagallery.js?ver=1.005"></script>
-    <script src="js/main.js?ver=3.003"></script>
+    <script src="mediagallery/mediagallery.js?ver=1.015"></script>
+    <script src="js/main.js?ver=3.005"></script>
     <!--
 	<script src="js/googleAnalytics.js?ver=1.000"></script>
 	<script src="https://www.google-analytics.com/analytics.js" async defer></script>
