Moved to seperate repository

--- a/public/index.html
+++ b/public/index.html
@@ -50,8 +50,8 @@
 					<li><a href="#MediaPage" data-dir="Photos" data-toggle="tab"><i class="fa fa-camera"></i> Photos</a></li>
                     <li><a href="#MediaPage" data-dir="Videos" data-toggle="tab"><i class="fa fa-video-camera"></i> Videos</a></li>
                     <li><a href="#MediaPage" data-dir="Music" data-toggle="tab"><i class="fa fa-music"></i> Music</a></li>
+                    <li><a href="#MediaPage" data-dir="Docs" data-toggle="tab"><i class="fa fa-file"></i> Docs</a></li>
                     <!--
-                    <li><a href="#MediaPage" data-dir="Docs" data-toggle="tab"><i class="fa fa-files-o"></i> Docs</a></li>
                     <li><a href="/wiki"><i class="fa fa-wikipedia-w"></i> Wiki</a></li>
                     -->
 				</ul>
@@ -129,7 +129,7 @@ in bands with a group of friends since High School and we have created a music c
 </div>
 
 	<!-- The Gallery as lightbox dialog, should be a child element of the document body -->
-	<div id="blueimp-gallery" class="blueimp-gallery">
+	<div id="blueimpGalleryModal" class="blueimp-gallery">
 		<div class="slides"></div>
 		<h3 class="title"></h3>
 		<a class="prev">‹</a>
@@ -149,7 +149,7 @@ in bands with a group of friends since High School and we have created a music c
         integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd">
     </script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/js/blueimp-gallery.min.js"></script>
-    <script src="mediagallery/mediagallery.js?ver=1.038"></script>
+    <script src="mediagallery/mediagallery.js?ver=1.045"></script>
     <script src="js/main.js?ver=3.005"></script>
     <!--
 	<script src="js/googleAnalytics.js?ver=1.000"></script>
