--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/css/blueimp-gallery.min.css">
-	<link rel="stylesheet" href="css/main.css?ver=3.005">
+	<link rel="stylesheet" href="css/main.css?ver=3.006">
 </head>
 
 <body>
@@ -68,6 +68,7 @@
 			<h1>Welcome!</h1>
 			<p>Welcome to the John J Kauflin personal website.</p>
             <h5>(Click on the Menu at the top to see Photos, Videos, and Music)</h5>
+            <h5>AUTODEPLOY</h5>
             <!--
             <iframe src="//www.youtube.com/embed/d9nBqqKexPo" frameborder="0" allowfullscreen></iframe>
             --> 
@@ -151,11 +152,9 @@ in bands with a group of friends since High School and we have created a music c
     </script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/js/blueimp-gallery.min.js"></script>
     <script src="MediaGallery/mediagallery.js?ver=1.069"></script>
-    <script src="js/main.js?ver=3.005"></script>
-    <!--
-    <script src="js/googleAnalytics.js?ver=1.000"></script>
+    <script src="js/main.js?ver=3.006"></script>
+    <script src="js/googleAnalytics.js?ver=1.001"></script>
     <script src="https://www.google-analytics.com/analytics.js" async defer></script>
-    -->
 
 </body>
 </html>
