--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:type" content="article" />
 	<meta property="og:title" content="John J Kauflin website" />
 	<meta property="og:description" content="John J Kauflin personal website" />
-	<meta property="og:image" content="https://johnkauflin.com/images/jjk.jpg" />
+	<meta property="og:image" content="https://johnkauflin.com/home/Media/images/johnk-headshot.jpg" />
 
 	<link rel="icon" href="favicon.ico">
 	<link rel="manifest" href="site.webmanifest">
@@ -64,7 +64,7 @@
 
 	<div class="tab-pane active" id="HomePage">
 		<div class="jumbotron">
-			<img src="Media/images/johnk-headshot.jpg" class="img-circle pull-left" alt="John Kauflin photo" width="22%" display="inline" style="margin:0 10px 10px 0;" > 
+			<img src="home/Media/images/johnk-headshot.jpg" class="img-circle pull-left" alt="John Kauflin photo" width="22%" display="inline" style="margin:0 10px 10px 0;" > 
 			<h1>Welcome!</h1>
 			<p>Welcome to the John J Kauflin personal website.</p>
             <h5>(Click on the Menu at the top to see Photos, Videos, and Music)</h5>
@@ -106,7 +106,7 @@
 				</div>
 				<div class="modal-body">
 				<span>
-				<img src="Media/images/johnk-headshot.jpg" class="img-circle pull-left" alt="John Kauflin photo" width="22%" display="inline" style="margin:0 10px 10px 0;" > 
+				<img src="home/Media/images/johnk-headshot.jpg" class="img-circle pull-left" alt="John Kauflin photo" width="22%" display="inline" style="margin:0 10px 10px 0;" > 
 Welcome to my website, and yes, it's mostly about me.  However, I hope this site also reflects the experiences I've had 
 with all the wonderful friends, family, bandmates, and workmates I've had in my life.  It's been my pleasure to know you all.
 This website is a place where I can collect and present pictures, videos, and music to honor the memory of people and things.  
@@ -151,7 +151,7 @@ in bands with a group of friends since High School and we have created a music c
         integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd">
     </script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/js/blueimp-gallery.min.js"></script>
-    <script src="MediaGallery/mediagallery.js?ver=1.069"></script>
+    <script src="home/MediaGallery/mediagallery.js?ver=1.077"></script>
     <script src="js/main.js?ver=3.006"></script>
     <script src="js/googleAnalytics.js?ver=1.001"></script>
     <script src="https://www.google-analytics.com/analytics.js" async defer></script>
