--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
                     <!--
                     <li><a href="#MediaPage" data-dir="Docs" data-toggle="tab"><i class="fa fa-file"></i> Docs</a></li>
                     <li><a href="/wiki"><i class="fa fa-wikipedia-w"></i> Wiki</a></li>
+                    <li><a id="login" href="#" role="button">login</a></li>
+                    <li><a id="logout" href="#" role="button">logout</a></li>
                     -->
 				</ul>
 			</div> <!-- navbar-collapse (controlled by the collapse toggle button) -->
@@ -141,6 +143,138 @@ in bands with a group of friends since High School and we have created a music c
 		<ol class="indicator"></ol>
 	</div>
 
+<!--
+
+<div id="LoginModal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">
+                    <img style="margin-top: -10px; margin-right: 5px;" alt="Brand logo photo"
+                        src="images/logo-photo.jpg">
+                    HOA DB Login</h4>
+            </div>
+
+            <div id="LoginInput" class="modal-body">
+                <div class="form-group">
+                    <input type="text" class="form-control resetval" name="username" id="username"
+                        placeholder="Username">
+                    <input type="password" class="form-control resetval" name="password" id="password"
+                        placeholder="Password">
+                </div>
+                <button id="LoginButton" type="button" class="btn btn-success">Login</button>
+
+                <div class="ajaxError" style="margin-top: 10px;"></div>
+                <div id="LoginDisplay" style="margin-top: 10px;">
+                </div>
+            </div>
+
+            <div class="modal-footer">
+                <a id="ForgotPassword" href="#" class="button" role="button">Forgot password?</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="ResetPasswordModal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">
+                    <img style="margin-top: -10px; margin-right: 5px;" alt="Brand logo photo"
+                        src="images/logo-photo.jpg">
+                    HOA DB Password Reset</h4>
+            </div>
+
+            <div id="ResetPasswordInput" class="modal-body">
+                <div class="form-group">
+                    <input type="text" class="form-control resetval" name="usernameReset" id="usernameReset"
+                        placeholder="Username">
+                    <input type="text" class="form-control resetval" name="emailAddrReset" id="emailAddrReset"
+                        placeholder="or Email address">
+                </div>
+                <button id="ResetPasswordButton" type="button" class="btn btn-success">Reset Password</button>
+
+                <div class="ajaxError" style="margin-top: 10px;"></div>
+                <div id="ResetPasswordDisplay" style="margin-top: 10px;">
+                </div>
+            </div>
+
+            <div class="modal-footer">
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="PasswordModal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">
+                    <img style="margin-top: -10px; margin-right: 5px;" alt="Brand logo photo"
+                        src="images/logo-photo.jpg">
+                    HOA DB Set Password</h4>
+            </div>
+
+            <div id="PasswordInput" class="modal-body">
+                <div class="form-group">
+                    <input type="hidden" class="form-control resetval" name="regCode" id="regCode">
+                    <input type="password" class="form-control resetval" name="password_1" id="password_1"
+                        placeholder="Password">
+                    <input type="password" class="form-control resetval" name="password_2" id="password_2"
+                        placeholder="Confirm Password">
+                </div>
+                <button id="PasswordButton" type="button" class="btn btn-success">Set Password</button>
+
+                <div class="ajaxError" style="margin-top: 10px;"></div>
+                <div id="PasswordDisplay" style="margin-top: 10px;">
+                </div>
+            </div>
+
+            <div class="modal-footer">
+                Password must be at least 8 characters, and include at least one number, letter, symbol, and CAPS
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="RegisterModal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">
+                    <img style="margin-top: -10px; margin-right: 5px;" alt="Brand logo photo"
+                        src="images/logo-photo.jpg">
+                    HOA DB User Registration</h4>
+            </div>
+
+            <div id="RegisterInput" class="modal-body">
+                <div class="form-group">
+                    <input type="text" class="form-control resetval" name="usernameReg" id="usernameReg"
+                        placeholder="Username">
+                    <input type="text" class="form-control resetval" name="emailAddrReg" id="emailAddrReg"
+                        placeholder="Email address">
+                    <input type="text" class="form-control resetval" name="userLevelReg" id="userLevelReg"
+                        placeholder="User Level">
+                </div>
+                <button id="RegisterButton" type="button" class="btn btn-success">Create User</button>
+
+                <div class="ajaxError"></div>
+                <div id="RegisterDisplay" style="margin-top: 10px;">
+                </div>
+            </div>
+
+            <div class="modal-footer">
+            </div>
+        </div>
+    </div>
+</div>
+-->
+
 
     <!-- Bootstrap core JavaScript ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -152,6 +286,9 @@ in bands with a group of friends since High School and we have created a music c
     </script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/js/blueimp-gallery.min.js"></script>
     <script src="MediaGallery/mediagallery.js?ver=1.085"></script>
+    <!--
+    <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.000"></script>
+    -->
     <script src="js/main.js?ver=3.006"></script>
     <script src="js/googleAnalytics.js?ver=1.001"></script>
     <script src="https://www.google-analytics.com/analytics.js" async defer></script>
