--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/css/blueimp-gallery.min.css">
-    <!--
-    <link rel="stylesheet" href="css/main.css?ver=3.006">
-    -->
+    <link rel="stylesheet" href="css/main.css?ver=4.001">
 </head>
 
 <body>
@@ -84,14 +82,12 @@
 				<h4 id=MediaHeader></h4>
 				<div id="MediaMenu" class="panel-group"></div>
 			</div>
-					
 			<div class="col-sm-7 col-md-9">
                 <div id="MediaConfig" class="pull-right"></div>
 				<ol id="MediaBreadcrumbs" class="breadcrumb"></ol>
 				<div id="MediaFolders"></div>
                 <div id="MediaThumbnails"></div>
             </div>
-            
 		</div><!-- row -->	                
 	</div><!-- end of Detail -->
 
@@ -286,11 +282,15 @@ in bands with a group of friends since High School and we have created a music c
         crossorigin="anonymous"></script>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/js/blueimp-gallery.min.js"></script>
-    <script src="MediaGallery/mediagallery.js?ver=1.085"></script>
+    <script>
+        var jjkgalleryRoot = "vendor/jkauflin/jjkgallery/";
+    </script>
+    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=1.001"></script>
+
     <!--
     <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.000"></script>
     -->
-    <script src="js/main.js?ver=3.006"></script>
+    <script src="js/main.js?ver=3.007"></script>
     <!--
     <script src="js/googleAnalytics.js?ver=1.001"></script>
     <script src="https://www.google-analytics.com/analytics.js" async defer></script>
