--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 	<div class="container tab-pane" id="MediaPage">
         <div class="row">
-			<div class="hidden-xs col-sm-5 col-md-3">
+			<div class="col-sm-5 col-md-3 d-none d-sm-block">
 				<h4 id=MediaHeader></h4>
 				<div id="MediaMenu" class="panel-group"></div>
 			</div>
