Working on home

--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 <div class="tab-content">
 
 	<div class="container tab-pane show active" id="HomePage">
-		<img src="Media/images/johnk-headshot.jpg" class="rounded-circle float-left m-3" alt="John Kauflin photo" width="22%" display="inline" style="margin:0 10px 10px 0;" > 
+        <img src="Media/images/johnk-headshot.jpg" class="rounded-circle float-left m-3" alt="John Kauflin photo" 
+            width="25%" > 
 		<h1>Welcome!</h1>
 		<p>Welcome to the John J Kauflin personal website.</p>
             <!--
-
         <a class="btn btn-lg btn-info m-2 p-3" href="index.html?media-dir=Photos">
             <i class="fa fa-camera fa-2x float-left"></i> Photos</a>
 
@@ -99,13 +99,13 @@
 		<div class="modal-dialog modal-lg">
 			<div class="modal-content">
 				<div class="modal-header">
+                    <h4 class="modal-title">John J Kauflin</h4>
 					<button type="button" class="close" data-dismiss="modal">&times;</button>
 
-					<h4 class="modal-title">John J Kauflin</h4>
 				</div>
 				<div class="modal-body">
 				<span>
-				<img src="Media/images/johnk-headshot.jpg" class="img-circle pull-left" alt="John Kauflin photo" width="22%" display="inline" style="margin:0 10px 10px 0;" > 
+                <img src="Media/images/johnk-headshot.jpg" class="rounded-circle float-left m-3" alt="John Kauflin photo" width="22%">
 Welcome to my website, and yes, it's mostly about me.  However, I hope this site also reflects the experiences I've had 
 with all the wonderful friends, family, bandmates, and workmates I've had in my life.  It's been my pleasure to know you all.
 This website is a place where I can collect and present pictures, videos, and music to honor the memory of people and things.  
