--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
 
 	</div><!-- end of Home tab -->
 
-	<div class="container tab-pane" id="MediaPage">
+	<div class="tab-pane" id="MediaPage">
         <div class="row">
 			<div class="col-sm-5 col-md-3 d-none d-sm-block">
 				<h4 id=MediaHeader></h4>
 				<div id="MediaMenu" class="panel-group"></div>
 			</div>
 			<div class="col-sm-7 col-md-9">
-                <div id="MediaConfig" class="pull-right"></div>
+                <div id="MediaConfig" class="float-right"></div>
 				<ol id="MediaBreadcrumbs" class="breadcrumb"></ol>
 				<div id="MediaFolders"></div>
                 <div id="MediaThumbnails"></div>
