--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/css/blueimp-gallery.min.css">
     <link rel="stylesheet" href="css/main.css?ver=4.001">
 </head>
@@ -280,16 +278,14 @@ in bands with a group of friends since High School and we have created a music c
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
-
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/js/blueimp-gallery.min.js"></script>
     <script>
         var jjkgalleryRoot = "vendor/jkauflin/jjkgallery/";
+        var jjkloginRoot = "vendor/jkauflin/jjklogin/";
     </script>
     <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=1.001"></script>
+    <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.001"></script>
 
-    <!--
-    <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.000"></script>
-    -->
     <script src="js/main.js?ver=3.007"></script>
     <!--
     <script src="js/googleAnalytics.js?ver=1.001"></script>
