--- a/index.html
+++ b/index.html
@@ -43,12 +43,11 @@
             <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#HomePage"><i class="fa fa-home"></i> Home</a></li>
             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#MediaPage" data-dir="Photos"><i class="fa fa-camera"></i> Photos</a></li>
             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#MediaPage" data-dir="Videos" ><i class="fa fa-video-camera"></i> Videos</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#MediaPage" data-dir="Music" ><i class="fa fa-music"></i> Music</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#MediaPage" data-dir="Music"><i class="fa fa-music"></i> Music</a></li>
+            <li class="nav-item"><a class="nav-link" id="login" href="#" role="button">login</a></li>
             <!--
             <li><a href="#MediaPage" data-dir="Docs" data-toggle="tab"><i class="fa fa-file"></i> Docs</a></li>
             <li><a href="/wiki"><i class="fa fa-wikipedia-w"></i> Wiki</a></li>
-            <li><a id="login" href="#" role="button">login</a></li>
-            <li><a id="logout" href="#" role="button">logout</a></li>
             -->
         </ul>
     </div>
@@ -58,11 +57,14 @@
 <div class="container-fluid">
 <div class="tab-content">
 
-	<div class="container tab-pane show active" id="HomePage">
+	<div class="tab-pane show active" id="HomePage">
+        <div id="username" class="float-right"></div>
+
         <img src="Media/images/johnk-headshot.jpg" class="rounded-circle float-left m-3" alt="John Kauflin photo" 
-            width="25%" > 
+            width="23%" > 
 		<h1>Welcome!</h1>
-		<p>Welcome to the John J Kauflin personal website.</p>
+        <p>Welcome to the John J Kauflin personal website.</p>
+
             <!--
         <a class="btn btn-lg btn-info m-2 p-3" href="index.html?media-dir=Photos">
             <i class="fa fa-camera fa-2x float-left"></i> Photos</a>
@@ -103,7 +105,7 @@
 				</div>
 				<div class="modal-body">
 				<span>
-                <img src="Media/images/johnk-headshot.jpg" class="rounded-circle float-left m-3" alt="John Kauflin photo" width="25%">
+                <img src="Media/images/johnk-headshot.jpg" class="rounded-circle float-left m-3" alt="John Kauflin photo" width="23%">
 Welcome to my website, and yes, it's mostly about me.  However, I hope this site also reflects the experiences I've had 
 with all the wonderful friends, family, bandmates, and workmates I've had in my life.  It's been my pleasure to know you all.
 This website is a place where I can collect and present pictures, videos, and music to honor the memory of people and things.  
@@ -138,138 +140,6 @@ in bands with a group of friends since High School and we have created a music c
 		<ol class="indicator"></ol>
 	</div>
 
-<!--
-
-<div id="LoginModal" class="modal fade" role="dialog">
-    <div class="modal-dialog modal-sm">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">
-                    <img style="margin-top: -10px; margin-right: 5px;" alt="Brand logo photo"
-                        src="images/logo-photo.jpg">
-                    HOA DB Login</h4>
-            </div>
-
-            <div id="LoginInput" class="modal-body">
-                <div class="form-group">
-                    <input type="text" class="form-control resetval" name="username" id="username"
-                        placeholder="Username">
-                    <input type="password" class="form-control resetval" name="password" id="password"
-                        placeholder="Password">
-                </div>
-                <button id="LoginButton" type="button" class="btn btn-success">Login</button>
-
-                <div class="ajaxError" style="margin-top: 10px;"></div>
-                <div id="LoginDisplay" style="margin-top: 10px;">
-                </div>
-            </div>
-
-            <div class="modal-footer">
-                <a id="ForgotPassword" href="#" class="button" role="button">Forgot password?</a>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div id="ResetPasswordModal" class="modal fade" role="dialog">
-    <div class="modal-dialog modal-sm">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">
-                    <img style="margin-top: -10px; margin-right: 5px;" alt="Brand logo photo"
-                        src="images/logo-photo.jpg">
-                    HOA DB Password Reset</h4>
-            </div>
-
-            <div id="ResetPasswordInput" class="modal-body">
-                <div class="form-group">
-                    <input type="text" class="form-control resetval" name="usernameReset" id="usernameReset"
-                        placeholder="Username">
-                    <input type="text" class="form-control resetval" name="emailAddrReset" id="emailAddrReset"
-                        placeholder="or Email address">
-                </div>
-                <button id="ResetPasswordButton" type="button" class="btn btn-success">Reset Password</button>
-
-                <div class="ajaxError" style="margin-top: 10px;"></div>
-                <div id="ResetPasswordDisplay" style="margin-top: 10px;">
-                </div>
-            </div>
-
-            <div class="modal-footer">
-            </div>
-        </div>
-    </div>
-</div>
-
-<div id="PasswordModal" class="modal fade" role="dialog">
-    <div class="modal-dialog modal-sm">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">
-                    <img style="margin-top: -10px; margin-right: 5px;" alt="Brand logo photo"
-                        src="images/logo-photo.jpg">
-                    HOA DB Set Password</h4>
-            </div>
-
-            <div id="PasswordInput" class="modal-body">
-                <div class="form-group">
-                    <input type="hidden" class="form-control resetval" name="regCode" id="regCode">
-                    <input type="password" class="form-control resetval" name="password_1" id="password_1"
-                        placeholder="Password">
-                    <input type="password" class="form-control resetval" name="password_2" id="password_2"
-                        placeholder="Confirm Password">
-                </div>
-                <button id="PasswordButton" type="button" class="btn btn-success">Set Password</button>
-
-                <div class="ajaxError" style="margin-top: 10px;"></div>
-                <div id="PasswordDisplay" style="margin-top: 10px;">
-                </div>
-            </div>
-
-            <div class="modal-footer">
-                Password must be at least 8 characters, and include at least one number, letter, symbol, and CAPS
-            </div>
-        </div>
-    </div>
-</div>
-
-<div id="RegisterModal" class="modal fade" role="dialog">
-    <div class="modal-dialog modal-sm">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">
-                    <img style="margin-top: -10px; margin-right: 5px;" alt="Brand logo photo"
-                        src="images/logo-photo.jpg">
-                    HOA DB User Registration</h4>
-            </div>
-
-            <div id="RegisterInput" class="modal-body">
-                <div class="form-group">
-                    <input type="text" class="form-control resetval" name="usernameReg" id="usernameReg"
-                        placeholder="Username">
-                    <input type="text" class="form-control resetval" name="emailAddrReg" id="emailAddrReg"
-                        placeholder="Email address">
-                    <input type="text" class="form-control resetval" name="userLevelReg" id="userLevelReg"
-                        placeholder="User Level">
-                </div>
-                <button id="RegisterButton" type="button" class="btn btn-success">Create User</button>
-
-                <div class="ajaxError"></div>
-                <div id="RegisterDisplay" style="margin-top: 10px;">
-                </div>
-            </div>
-
-            <div class="modal-footer">
-            </div>
-        </div>
-    </div>
-</div>
--->
-
 
     <!-- Bootstrap core JavaScript ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -281,7 +151,6 @@ in bands with a group of friends since High School and we have created a music c
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/js/blueimp-gallery.min.js"></script>
     <script>
         var jjkgalleryRoot = "vendor/jkauflin/jjkgallery/";
-        var jjkloginRoot = "vendor/jkauflin/jjklogin/";
     </script>
     <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=1.001"></script>
     <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.001"></script>
