--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 				<div id="MediaMenu" class="panel-group"></div>
 			</div>
 			<div class="col-sm-7 col-md-9">
-                <div id="MediaConfig" class="float-right"></div>
-				<ol id="MediaBreadcrumbs" class="breadcrumb"></ol>
+                <div id="MediaConfig" class="float-right m-2"></div>
+				<ol id="MediaBreadcrumbs" class="breadcrumb mt-2 p-1"></ol>
 				<div id="MediaFolders"></div>
                 <div id="MediaThumbnails"></div>
             </div>
@@ -150,8 +150,8 @@ in bands with a group of friends since High School and we have created a music c
         crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/js/blueimp-gallery.min.js"></script>
 
-    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=1.002"></script>
-    <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.002"></script>
+    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=1.003"></script>
+    <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.003"></script>
 
     <script src="js/main.js?ver=3.007"></script>
     <!--
