--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
             <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#HomePage"><i class="fa fa-home"></i> Home</a></li>
             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#MediaPage" data-dir="Photos"><i class="fa fa-camera"></i> Photos</a></li>
             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#MediaPage" data-dir="Videos" ><i class="fa fa-video-camera"></i> Videos</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#MediaPage" data-dir="Music"><i class="fa fa-music"></i> Music</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#MediaPage" data-dir="Music"><i
+                        class="fa fa-music"></i> Music</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#MediaPage" data-dir="Docs"><i
+                        class="fa fa-file"></i> Docs</a></li>
             <li class="nav-item"><a class="nav-link" id="login" href="#" role="button">login</a></li>
             <!--
-            <li><a href="#MediaPage" data-dir="Docs" data-toggle="tab"><i class="fa fa-file"></i> Docs</a></li>
             <li><a href="/wiki"><i class="fa fa-wikipedia-w"></i> Wiki</a></li>
             -->
         </ul>
