Adding jjklogin event

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
 	<div class="tab-pane show active" id="HomePage">
         <div id="username" class="float-right"></div>
+        <div id="jjkloginEventElement"></div>
 
         <img src="Media/images/johnk-headshot.jpg" class="rounded-circle float-left m-3" alt="John Kauflin photo" 
             width="23%" > 
