--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/css/blueimp-gallery.min.css">
-    <link rel="stylesheet" href="css/main.css?ver=4.001">
+    <link rel="stylesheet" href="css/main.css?ver=4.004">
 </head>
 
 <body>
@@ -43,12 +43,11 @@
             <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#HomePage"><i class="fa fa-home"></i> Home</a></li>
             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#MediaPage" data-dir="Photos"><i class="fa fa-camera"></i> Photos</a></li>
             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#MediaPage" data-dir="Videos" ><i class="fa fa-video-camera"></i> Videos</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#MediaPage" data-dir="Music"><i
-                        class="fa fa-music"></i> Music</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#MediaPage" data-dir="Docs"><i
-                        class="fa fa-file"></i> Docs</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#MediaPage" data-dir="Music"><i class="fa fa-music"></i> Music</a></li>
             <li class="nav-item"><a class="nav-link" id="login" href="#" role="button">login</a></li>
             <!--
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#MediaPage" data-dir="Docs"><i
+                        class="fa fa-file"></i> Docs</a></li>
             <li><a href="/wiki"><i class="fa fa-wikipedia-w"></i> Wiki</a></li>
             -->
         </ul>
@@ -61,6 +60,7 @@
 
 	<div class="tab-pane show active" id="HomePage">
         <div id="username" class="float-right"></div>
+        <div id="jjkloginEventElement"></div>
 
         <img src="Media/images/johnk-headshot.jpg" class="rounded-circle float-left m-3" alt="John Kauflin photo" 
             width="23%" > 
@@ -76,13 +76,33 @@
                                 <i class="fa fa-legal fa-2x pull-left"></i> Covenants <br>and By Laws</a>
             -->
 
+                <div class="d-block d-lg-none">
+                    <a class="btn btn-info float-left mt-2 mr-2 link-tile-sm" href="index.html?media-dir=Photos">
+                        <i class="fa fa-camera fa-2x float-left"></i> Photos</a>
+                    <a class="btn btn-info float-left mt-2 mr-2 link-tile-sm" href="index.html?media-dir=Videos">
+                        <i class="fa fa-video-camera fa-2x float-left"></i> Videos</a>
+                    <a class="btn btn-info float-left mt-2 mr-2 link-tile-sm" href="index.html?media-dir=Music">
+                        <i class="fa fa-music fa-2x float-left"></i> Music</a>
+                </div>
+
+                <div class="d-none d-lg-block">
+                    <a class="btn btn-info float-left mt-2 mr-2 link-tile" href="index.html?media-dir=Photos">
+                <i class="fa fa-camera fa-2x float-left"></i> Photos</a>
+                    <a class="btn btn-info float-left mt-2 mr-2 link-tile" href="index.html?media-dir=Videos">
+                <i class="fa fa-video-camera fa-2x float-left"></i> Videos</a>
+                    <a class="btn btn-info float-left mt-2 mr-2 link-tile" href="index.html?media-dir=Music">
+                <i class="fa fa-music fa-2x float-left"></i> Music</a>
+                </div>
+
+
 	</div><!-- end of Home tab -->
 
 	<div class="tab-pane" id="MediaPage">
         <div class="row">
 			<div class="col-sm-5 col-md-3 d-none d-sm-block">
-				<h4 id=MediaHeader></h4>
-				<div id="MediaMenu" class="panel-group"></div>
+                <h5 id=MediaHeader></h5>
+                <div id="MediaMenu">
+                </div>
 			</div>
 			<div class="col-sm-7 col-md-9">
                 <div id="MediaConfig" class="float-right m-2"></div>
