Changes to jjkgallery

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
 	<link rel="icon" href="favicon.ico?ver=1.002">
 	<link rel="manifest" href="site.webmanifest">
-	<link rel="apple-touch-icon" href="icon.png">
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -26,17 +25,15 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/css/blueimp-gallery.min.css">
-    <link rel="stylesheet" href="css/main.css?ver=4.004">
+    <link rel="stylesheet" href="css/main.css?ver=4.005">
 </head>
 
 <body>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <a class="navbar-brand" data-toggle="modal" href="#aboutModal">John J Kauflin</a>
-
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
-
     <!-- Navbar links -->
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="nav navbar-nav ml-auto">
@@ -54,7 +51,6 @@
     </div>
 </nav>
 
-
 <div class="container-fluid">
 <div class="tab-content">
 
@@ -66,35 +62,12 @@
             width="23%" > 
 		<h1>Welcome!</h1>
         <p>Welcome to the John J Kauflin personal website.</p>
-
-            <!--
-        <a class="btn btn-lg btn-info m-2 p-3" href="index.html?media-dir=Photos">
+        <a class="btn btn-info float-left mt-2 mr-2 link-tile" href="index.html?media-dir=Photos">
             <i class="fa fa-camera fa-2x float-left"></i> Photos</a>
-
-
-        <a class="btn btn-lg btn-success link-tile" href="index.html?media-dir=Docs">
-                                <i class="fa fa-legal fa-2x pull-left"></i> Covenants <br>and By Laws</a>
-            -->
-
-                <div class="d-block d-lg-none">
-                    <a class="btn btn-info float-left mt-2 mr-2 link-tile-sm" href="index.html?media-dir=Photos">
-                        <i class="fa fa-camera fa-2x float-left"></i> Photos</a>
-                    <a class="btn btn-info float-left mt-2 mr-2 link-tile-sm" href="index.html?media-dir=Videos">
-                        <i class="fa fa-video-camera fa-2x float-left"></i> Videos</a>
-                    <a class="btn btn-info float-left mt-2 mr-2 link-tile-sm" href="index.html?media-dir=Music">
-                        <i class="fa fa-music fa-2x float-left"></i> Music</a>
-                </div>
-
-                <div class="d-none d-lg-block">
-                    <a class="btn btn-info float-left mt-2 mr-2 link-tile" href="index.html?media-dir=Photos">
-                <i class="fa fa-camera fa-2x float-left"></i> Photos</a>
-                    <a class="btn btn-info float-left mt-2 mr-2 link-tile" href="index.html?media-dir=Videos">
-                <i class="fa fa-video-camera fa-2x float-left"></i> Videos</a>
-                    <a class="btn btn-info float-left mt-2 mr-2 link-tile" href="index.html?media-dir=Music">
-                <i class="fa fa-music fa-2x float-left"></i> Music</a>
-                </div>
-
-
+        <a class="btn btn-info float-left mt-2 mr-2 link-tile" href="index.html?media-dir=Videos">
+            <i class="fa fa-video-camera fa-2x float-left"></i> Videos</a>
+        <a class="btn btn-info float-left mt-2 mr-2 link-tile" href="index.html?media-dir=Music">
+            <i class="fa fa-music fa-2x float-left"></i> Music</a>
 	</div><!-- end of Home tab -->
 
 	<div class="tab-pane" id="MediaPage">
@@ -128,7 +101,7 @@
 				<div class="modal-body">
 				<span>
                 <img src="Media/images/johnk-headshot.jpg" class="rounded-circle float-left m-3" alt="John Kauflin photo" width="23%">
-Welcome to my website, and yes, it's mostly about me.  However, I hope this site also reflects the experiences I've had 
+Welcome to my website, and ok, it's mostly about me.  However, I hope this site also reflects the experiences I've had 
 with all the wonderful friends, family, bandmates, and workmates I've had in my life.  It's been my pleasure to know you all.
 This website is a place where I can collect and present pictures, videos, and music to honor the memory of people and things.  
 I hope it does justice to all of the people and things I have loved.
@@ -172,7 +145,7 @@ in bands with a group of friends since High School and we have created a music c
         crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/js/blueimp-gallery.min.js"></script>
 
-    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=1.005"></script>
+    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=1.006"></script>
     <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.004"></script>
 
     <script src="js/main.js?ver=3.007"></script>
