--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#MediaPage" data-dir="Photos"><i class="fa fa-camera"></i> Photos</a></li>
             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#MediaPage" data-dir="Videos" ><i class="fa fa-video-camera"></i> Videos</a></li>
             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#MediaPage" data-dir="Music"><i class="fa fa-music"></i> Music</a></li>
+            <li id="PlaylistNav" class="nav-item d-none"><a class="nav-link" data-toggle="tab" href="#PlaylistPage">
+                <i class="fa fa-spotify"></i> Playlist</a></li>
             <li class="nav-item"><a class="nav-link" id="login" href="#" role="button">login</a></li>
             <!--
             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#MediaPage" data-dir="Docs"><i
@@ -68,6 +70,7 @@
             <i class="fa fa-video-camera fa-2x float-left"></i> Videos</a>
         <a class="btn btn-info float-left mt-2 mr-2 link-tile" href="index.html?media-dir=Music">
             <i class="fa fa-music fa-2x float-left"></i> Music</a>
+
 	</div><!-- end of Home tab -->
 
 	<div class="tab-pane" id="MediaPage">
@@ -82,6 +85,16 @@
 				<ol id="MediaBreadcrumbs" class="breadcrumb mt-2 p-1"></ol>
 				<div id="MediaFolders"></div>
                 <div id="MediaThumbnails"></div>
+            </div>
+		</div><!-- row -->	                
+	</div><!-- end of Detail -->
+
+    <div class="tab-pane" id="PlaylistPage">
+        <div class="row">
+			<div class="col-sm-5 col-md-3 d-none d-sm-block">
+                <h5>Playlist</h5>
+			</div>
+			<div class="col-sm-7 col-md-9">
             </div>
 		</div><!-- row -->	                
 	</div><!-- end of Detail -->
@@ -148,7 +161,8 @@ in bands with a group of friends since High School and we have created a music c
     <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=1.006"></script>
     <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.004"></script>
 
-    <script src="js/main.js?ver=3.007"></script>
+    <script src="js/main.js?ver=3.008"></script>
+    <script src="js/spotify.js?ver=3.008"></script>
     <!--
     <script src="js/googleAnalytics.js?ver=1.001"></script>
     <script src="https://www.google-analytics.com/analytics.js" async defer></script>
