--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@
                 <h5>Playlist</h5>
 			</div>
 			<div class="col-sm-7 col-md-9">
+
+                <!-- Need to do the login as a regular request, not an AJAX call from the javascript -->
+                <a id="SpotifyLogin" href="SpotifyLogin.php"><img id="SpotifyIcon" class="header-image2 right" alt="spotify icon"
+                    src="Media/images/Spotify_Icon_RGB_White.png"></a>
+
+
             </div>
 		</div><!-- row -->	                
 	</div><!-- end of Detail -->
@@ -157,6 +163,12 @@ in bands with a group of friends since High School and we have created a music c
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/js/blueimp-gallery.min.js"></script>
+
+    <script src="https://unpkg.com/rivescript@latest/dist/rivescript.min.js" type="text/javascript"></script>
+    
+    <script src="https://sdk.scdn.co/spotify-player.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/spotify-web-api-js@1.4.0/src/spotify-web-api.min.js"
+        type="text/javascript"></script>
 
     <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=1.006"></script>
     <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.004"></script>
