Added Spotify login

--- a/index.html
+++ b/index.html
@@ -95,14 +95,10 @@
                 <h5>Playlist</h5>
 			</div>
 			<div class="col-sm-7 col-md-9">
-                <!--
-                <button id="SpotifyLogin" type="button" class="btn btn-success">Spotify Login</button>
-<img id="SpotifyIcon" class="border float-right" alt="spotify icon" src="Media/images/Spotify_Icon_RGB_White.png">                -->
                 <!-- Need to do the login as a regular request, not an AJAX call from the javascript -->
-                <a id="SpotifyLogin" type="button" class="btn btn-success float-right m-2" href="SpotifyLogin.php">
-                    
-                    Spotify Login</a>
-
+                <a id="SpotifyLogin" class="float-right m-2" href="SpotifyLogin.php">
+                    <img id="SpotifyIcon" width="35" src="Media/images/Spotify_Icon_RGB_Black.png">
+                </a>
 
             </div>
 		</div><!-- row -->	                
