--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 	<link rel="icon" href="favicon.ico?ver=1.002">
 	<link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -93,6 +94,10 @@
         <div class="row">
 			<div class="col-sm-5 col-md-3">
                 <h5>Playlist</h5>
+
+                <button id="CreatePlaylist" class="btn btn-info float-left m-2">
+                    <i class="fa fa-spotify fa-2x float-left mr-2"></i> Create Playlist</button>
+
 			</div>
 			<div class="col-sm-7 col-md-9">
                 <!-- Need to do the login as a regular request, not an AJAX call from the javascript -->
