--- a/index.html
+++ b/index.html
@@ -179,8 +179,9 @@ in bands with a group of friends since High School and we have created a music c
     <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=1.006"></script>
     <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.004"></script>
 
+    <script src="js/util.js?ver=3.009"></script>
     <script src="js/main.js?ver=3.009"></script>
-    <script src="js/spotify.js?ver=3.009"></script>
+    <script src="js/spotify.js?ver=3.010"></script>
     <!--
     <script src="js/googleAnalytics.js?ver=1.001"></script>
     <script src="https://www.google-analytics.com/analytics.js" async defer></script>
