Update jjkgallery version

--- a/index.html
+++ b/index.html
@@ -169,15 +169,13 @@ in bands with a group of friends since High School and we have created a music c
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/js/blueimp-gallery.min.js"></script>
 
     <script src="https://unpkg.com/rivescript@latest/dist/rivescript.min.js" type="text/javascript"></script>
-
     <!--
     <script src="https://sdk.scdn.co/spotify-player.js" type="text/javascript"></script>
     -->
-    <script src="https://cdn.jsdelivr.net/npm/spotify-web-api-js@1.4.0/src/spotify-web-api.min.js"
-        type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/spotify-web-api-js@1.4.0/src/spotify-web-api.min.js" type="text/javascript"></script>
 
-    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=1.006"></script>
-    <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.004"></script>
+    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=1.012"></script>
+    <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.006"></script>
 
     <script src="js/util.js?ver=3.009"></script>
     <script src="js/main.js?ver=3.009"></script>
