--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
             <i class="fa fa-video-camera fa-2x float-left"></i> Videos</button>
         <button class="btn btn-info float-left mt-2 mr-2 link-tile media-page" data-dir="Music" type="button" role="button">
             <i class="fa fa-music fa-2x float-left"></i> Music</button>
+
+        <iframe
+            src="emoncms/dashboard/view?id=1&apikey=38618b096c7f94b4bf7ce190af925037"
+            width="90%" frameborder="0">
+        </iframe>
+
+
 	</div><!-- end of Home tab -->
 
 	<div class="tab-pane" id="MediaPage">
