--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <iframe
             src="emoncms/dashboard/view?id=1&apikey=38618b096c7f94b4bf7ce190af925037"
-            width="90%" frameborder="0">
+            frameborder="0" class="m-2">
         </iframe>
 
 
