--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
         <button class="btn btn-info float-left mt-2 mr-2 link-tile media-page" data-dir="Music" type="button" role="button">
             <i class="fa fa-music fa-2x float-left"></i> Music</button>
 
+        <h5>Solar Power Monitor></h5>
         <iframe
             src="emoncms/dashboard/view?id=1&apikey=38618b096c7f94b4bf7ce190af925037"
-            frameborder="0" class="m-2">
+            frameborder="1" class="m-2">
         </iframe>
 
 
