--- a/index.html
+++ b/index.html
@@ -74,9 +74,6 @@
             <div class="col-sm-6 col-md-7">
                 <div class="row">
                     <h1 class="m-2 d-none d-sm-block">Welcome!</h1>
-                    <!--
-                    <h4 class="m-2 d-block d-sm-none">Welcome!</h4>
-                    -->
                     <p class="m-2">Welcome to the John J Kauflin personal website.</p>
                     
                 </div>
@@ -91,7 +88,8 @@
                 </div>
 
                 <div class="row">
-                    <iframe src="emoncms/dashboard/view?id=1&apikey=38618b096c7f94b4bf7ce190af925037" frameborder="0" class="m-3" width="100%" height="600">
+                    <iframe src="emoncms/dashboard/view?id=1&apikey=38618b096c7f94b4bf7ce190af925037" 
+                        frameborder="0" class="m-3" width="90%" height="400">
                     </iframe>
                 </div>
 
